apps/base/immich/patch-ml-sa.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-machine-learning
  namespace: immich
spec:
  template:
    spec:
      serviceAccountName: immich
      automountServiceAccountToken: false
