apps/base/immich/patch-server-sa.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-server
  namespace: immich
spec:
  template:
    spec:
      serviceAccountName: immich
      automountServiceAccountToken: false
